[package]
name = "keepass_db"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = "0.8.2"
argon2 = "0.5.0"
base64 = "0.21.0"
bitstream-io = "1.6.0"
cbc = { version = "0.1.2", features = ["block-padding"] }
chacha20 = "0.9.0"
cipher = "0.4.4"
error_enum = { path = "../error_enum" }
getrandom = "0.2.8"
hex-literal = "0.3.4"
hmac = "0.12.1"
libflate = "1.3.0"
salsa20 = "0.10.2"
serde = { version = "1.0.159", features = ["derive"] }
sha2 = "0.10.6"
twofish = "0.7.1"
url = "2.3.1"
xmltree = "0.10.3"
