[package]
name = "kdbx-native-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kdbx-native-host"

[dependencies]
app_dirs2 = "2.5.5"
base64 = "0.21.0"
const_format = "0.2.30"
dialoguer = "0.10.4"
error_enum = { path = "../error_enum" }
getrandom = "0.2.9"
io-streams = "0.14.3"
keepass_db = { path = "../keepass_db" }
native-dialog = "0.6.3"
num_cpus = "1.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
xmltree = "0.10.3"
