[package]
name = "pfp-native-host"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pfp-native-host"

[dependencies]
base64 = "0.21.0"
dialoguer = "0.10.4"
error_enum = { path = "../error_enum" }
getrandom = "0.2.9"
io-streams = "0.14.3"
itertools = "0.10.5"
keepass_db = { path = "../keepass_db" }
native-dialog = "0.6.3"
num_cpus = "1.15.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
xmltree = "0.10.3"

[target.'cfg(unix)'.dependencies]
const_format = "0.2.30"

[target.'cfg(windows)'.dependencies]
winreg = "0.50.0"
